--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,11 @@ install:
   
 # custom build step
 script: mvn -C -B test compile
+
+# fix for buffer overflows in getLocalHostName
+# https://github.com/travis-ci/travis-ci/issues/5227
+before_install:
+  - cat /etc/hosts # optionally check the content *before*
+  - sudo hostname "$(hostname | cut -c1-63)"
+  - sed -e "s/^\\(127\\.0\\.0\\.1.*\\)/\\1 $(hostname | cut -c1-63)/" /etc/hosts | sudo tee /etc/hosts
+  - cat /etc/hosts # optionally check the content *after*
